# Endlesscreatures

./: pyproject.toml
endlesscreatures/domain/components/: energy.py  environmental_interaction.py  lifecycle.py  movement.py
endlesscreatures/domain/protocols/: energy_user.py  environmental_interactor.py  lifecycle_user.py  movement_user.py
tests/endlesscreatures/domain/components/: test_energy.py  test_environmental_interaction.py  test_lifecycle.py  test_movement.py
