[tool.poetry]
name = "endlesscreatures"
version = "0.1.0"
description = ""
authors = ["Alexis <prog.alexis.cs@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transitions = "^0.9.0"
py-trees = "^2.2.3"
pytest = "^7.4.3"
pygame = "^2.5.2"
numpydoc = "^1.6.0"
sphinx = "^7.2.6"
numpy = "^1.26.1"
sqlalchemy = "^2.0.22"
celery = "^5.3.4"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
